@@ -20,7 +20,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <springboot.version>2.7.2</springboot.version>
+    <springboot.version>3.2.1</springboot.version>
     <!--  remote -->
     <redisson.version>3.16.8</redisson.version>
     <jedis.version>4.2.3</jedis.version>
@@ -36,22 +36,23 @@
     <picocli.version>4.6.3</picocli.version>
 
     <junit.version>5.8.2</junit.version>
-    <lombok.version>1.18.24</lombok.version>
+    <lombok.version>1.18.30</lombok.version>
 
     <jmh.version>1.35</jmh.version>
+    <byte-buddy.version>1.14.11</byte-buddy.version>
+    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
   </properties>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.11.0</version>
         <configuration>
-          <source>19</source>
-          <target>19</target>
+          <source>21</source>
+          <target>21</target>
           <compilerArgs>
             <arg>--add-exports=java.base/jdk.internal=ALL-UNNAMED</arg>
-            <compilerArg>--enable-preview</compilerArg>
           </compilerArgs>
         </configuration>
       </plugin>
